View Issue Details

IDProjectCategoryView StatusLast Update
0026975Open CASCADEOCCT:Visualizationpublic2016-04-20 15:50
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version6.8.0 
Target Version7.0.0Fixed in Version7.0.0 
Summary0026975: Visualization, TKOpenGl - handle triangle strips correctly within Ray-Tracing core
DescriptionIt seems that triangle strips are converted incorrectly by Ray-Tracing uploader.

The code of the following functions should be checked:
- OpenGl_View::addRaytraceTriangleStripArray()
- OpenGl_View::addRaytraceTriangleFanArray()
Steps To Reproduce
pload MODELING VISUALIZATION
vclear
vinit View1
vraytrace 0
vdrawparray s trianglestrips v 0 0 0 n 0 0 1 v 0 2 0 n 0 0 1 v 2 0 0 n 0 0 1 v 2 2 0 n 0 0 1
vfit
# triangle strip is displayed correctly
vraytrace 1
# triangle strip is broken
TagsNo tags attached.
Test case numberbugs vis bug26975

Attached Files

  • tristrip_rt_KO.png (2,319 bytes)
  • tristrip_rast_OK.png (2,361 bytes)

Activities

kgv

2015-12-10 10:36

developer  

tristrip_rt_KO.png (2,319 bytes)

kgv

2015-12-10 10:36

developer  

tristrip_rast_OK.png (2,361 bytes)

git

2015-12-10 13:53

administrator   ~0048940

Branch CR26975 has been created by isk.

SHA-1: 8ebe4c3b1818e7df3ed901ea8f62ffcb358849d7


Detailed log of new commits:

Author: isk
Date: Thu Dec 10 13:53:30 2015 +0300

    0026975: Visualization, TKOpenGl - handle triangle strips correctly within Ray-Tracing core

isk

2015-12-10 13:54

developer   ~0048941

Dear Kirill,
Please review the branch CR26795.

git

2015-12-10 14:01

administrator   ~0048943

Branch CR26975 has been updated forcibly by isk.

SHA-1: 8d607bd0a002211a77cdfdff380acea7a012e982

isk

2015-12-10 14:01

developer   ~0048944

Add missing test case.

git

2015-12-10 14:18

administrator   ~0048945

Branch CR26975 has been updated forcibly by isk.

SHA-1: 4855e9b8afb83a00b4ead575c4f6c41194f3298d

isk

2015-12-10 14:19

developer   ~0048946

Update test case.

kgv

2015-12-10 14:26

developer   ~0048947

Please test the patch.

git

2015-12-11 13:25

administrator   ~0049027

Branch CR26975 has been updated forcibly by mkv.

SHA-1: 96c2593820c8b199b5082a1212a5e8ea20997571

mkv

2015-12-14 15:56

tester   ~0049088

Dear BugMaster,
Branch CR26975 was rebased on current master of occt git-repository.
SHA-1: 96c2593820c8b199b5082a1212a5e8ea20997571

mkv

2015-12-14 15:56

tester   ~0049089

Dear BugMaster,
Branch CR26975 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 96c2593820c8b199b5082a1212a5e8ea20997571

Number of compiler warnings:

occt component :
Linux: 0 (0 on master)
Windows: 0 (0 on master)
MacOS : 134 (134 on master)

products component :
Linux: 37 (37 on master)
Windows: 0 (0 on master)

Regressions/Differences/Improvements:
No regressions/differences

Testing cases:
http://occt-tests/CR26975-master-occt-64/Debian70-64/bugs/vis/bug26975.html
http://occt-tests/CR26975-master-occt-64/Windows-64-VC10/bugs/vis/bug26975.html
bugs vis bug26975: OK

Testing on Linux:
occt component :
Total MEMORY difference: 93347282 / 94056610 [-0.75%]
Total CPU difference: 19619.179999999815 / 19278.38999999991 [+1.77%]
products component :
Total MEMORY difference: 26226383 / 26088083 [+0.53%]
Total CPU difference: 7403.429999999996 / 7351.649999999994 [+0.70%]

Testing on Windows:
occt component :
Total MEMORY difference: 56324988 / 56346141 [-0.04%]
Total CPU difference: 17773.69313319891 / 17820.150230998894 [-0.26%]
products component :
Total MEMORY difference: 16516512 / 16529851 [-0.08%]
Total CPU difference: 5660.246683399965 / 5737.9039811999755 [-1.35%]

There are no differences in images found by testdiff.

mkv

2015-12-14 15:57

tester   ~0049090

Dear BugMaster,
Branch CR26975 is TESTED.

git

2016-04-17 14:01

administrator   ~0053040

Branch CR26975 has been deleted by kgv.

SHA-1: 96c2593820c8b199b5082a1212a5e8ea20997571

Related Changesets

occt: master ad2a55b2

2015-12-10 11:18:38

isk


Committer: bugmaster Details Diff
0026975: Visualization, TKOpenGl - handle triangle strips correctly within Ray-Tracing core Affected Issues
0026975
mod - src/OpenGl/OpenGl_View_Raytrace.cxx Diff File
add - tests/bugs/vis/bug26975 Diff File

Issue History

Date Modified Username Field Change
2015-12-10 10:36 kgv New Issue
2015-12-10 10:36 kgv Assigned To => kgv
2015-12-10 10:36 kgv File Added: tristrip_rt_KO.png
2015-12-10 10:36 kgv File Added: tristrip_rast_OK.png
2015-12-10 10:39 kgv Assigned To kgv => isk
2015-12-10 10:39 kgv Status new => assigned
2015-12-10 10:40 kgv Description Updated
2015-12-10 13:53 git Note Added: 0048940
2015-12-10 13:54 isk Note Added: 0048941
2015-12-10 13:54 isk Assigned To isk => kgv
2015-12-10 13:54 isk Status assigned => resolved
2015-12-10 14:01 git Note Added: 0048943
2015-12-10 14:01 isk Note Added: 0048944
2015-12-10 14:18 git Note Added: 0048945
2015-12-10 14:19 isk Note Added: 0048946
2015-12-10 14:26 kgv Note Added: 0048947
2015-12-10 14:26 kgv Assigned To kgv => bugmaster
2015-12-10 14:26 kgv Status resolved => reviewed
2015-12-10 15:09 kgv Product Version 6.9.1 => 6.8.0
2015-12-11 10:54 mkv Assigned To bugmaster => mkv
2015-12-11 13:25 git Note Added: 0049027
2015-12-14 15:56 mkv Note Added: 0049088
2015-12-14 15:56 mkv Note Added: 0049089
2015-12-14 15:57 mkv Note Added: 0049090
2015-12-14 15:57 mkv Assigned To mkv => bugmaster
2015-12-14 15:57 mkv Status reviewed => tested
2015-12-14 15:57 mkv Test case number => bugs vis bug26975
2015-12-18 15:25 bugmaster Changeset attached => occt master ad2a55b2
2015-12-18 15:25 bugmaster Status tested => verified
2015-12-18 15:25 bugmaster Resolution open => fixed
2016-04-17 14:01 git Note Added: 0053040
2016-04-20 15:42 aiv Fixed in Version => 7.0.0
2016-04-20 15:50 aiv Status verified => closed