0026975: Visualization, TKOpenGl - handle triangle strips correctly within Ray-Tracing core